# bank

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/bank/: DataObjects.hpp  constants.h  exceptions.h
include/bank/DataSources/: CompositeReadOnlyTypeDataSource.h  VirtualObjectMetaInfo.h
include/bank/DataSources/OperativeMemory/: AccountsGetter.h  DataObjectMetaInfo.h  DataSource.h  TypeDataSource.h  UniqueIdGetter.h
include/bank/DataSources/OperativeMemory/helpers/: GetClientsByTransactionHelper.h
include/bank/DataSources/OperativeMemoryDataSource/: OperativeMemoryDataObjectMetaInfo.h  OperativeMemoryDataSource.h  OperativeMemoryTypeDataSource.h
include/bank/DataSources/interfaces/: IDataObjectMetaInfo.h  IDataSource.h  ITypeDataSource.h
include/bank/decorators/: ClientCreateDecorator.h  TransactionBanDeleting.h  TransactionUserDataCheckDecorator.h
include/bank/interfaces/DataSource/: AccountsGetter.h  IDataObjectMetaInfo.h  IDataSource.h  IGetters.h  ITypeDataSource.h  ReadOnlyTypeDataSource.h
include/bank/interfaces/DataSource/helpers/: IGetClientsByTransactionsHelper.h
include/bank/interfaces/decorators/: ITypeDataSourceDecorator.h
schemes/: uml.classdiagram
tests/: CMakeLists.txt  client-tests.cpp  helpers.cpp  helpers.h  lookfuture-test.cpp  transaction-test.cpp
