cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD 20)

SET(BANKS_PROJECT_NAME BANKS)
SET(BANKS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(BANKS_INCLUDE_DIR ${BANKS_SOURCE_DIR}/include)
SET(BANKS_LIBRARY ${BANKS_PROJECT_NAME})

PROJECT(${BANKS_PROJECT_NAME})

ADD_LIBRARY(${BANKS_LIBRARY} INTERFACE include/bank/DataSources/interfaces/IDataSource.h include/bank/DataSources/interfaces/IDataObjectMetaInfo.h)
TARGET_INCLUDE_DIRECTORIES(${BANKS_LIBRARY} INTERFACE ${BANKS_INCLUDE_DIR})

ADD_SUBDIRECTORY(tests)
